# meetings

./: .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
meetings/: filters.py  mixins.py  models.py  permissions.py  serializers.py  service.py  urls.py  views.py
meetings/migrations/: 0001_initial.py
